feat: add @nxext/stencil

--- a/packages/stencil-library/src/index.html
+++ b/packages/stencil-library/src/index.html
@@ -9,6 +9,7 @@
     <script nomodule src="/build/stencil-library.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <my-component first="Stencil" last="works"></my-component>
+    <counter-component btnText="Increase counter">Start</counter-component>
   </body>
 </html>
